--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
   <title>Travelgram | Perfil de viagens </title>
 </head>
 <body>
+  <nav>
+  <a href="#" id="logo">
+    <img src="assets/icons/Logo.svg" alt="">
+  </a>
   
+  <ul id="primary-menu">
+    <li><a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="Icone de lupa"></a></li>
+    <li><a href="#">Explorer</li></a>
+    <li><a href="#">Minhas Viagens</li></a>
+    <li><a href="#"></a><img src="assets/Profile pic.png" alt="Imagen de Isabela Torres"></li>
+  </ul>
+  </nav>
+  <header>
+  </header>
 </body>
 </html>
