--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <title>Travelgram | Perfil de viagens </title>
 </head>
 <body>
-  <nav>
+  <div class="bg-surface-color">
+  <nav class="container">
   <a href="#" id="logo">
     <img src="assets/icons/Logo.svg" alt="">
   </a>
@@ -19,10 +20,38 @@
     <li><a href="#"><img src="assets/icons/MagnifyingGlass.svg" alt="Icone de lupa"></a></li>
     <li><a href="#">Explorer</li></a>
     <li><a href="#">Minhas Viagens</li></a>
-    <li><a href="#"></a><img src="assets/Profile pic.png" alt="Imagen de Isabela Torres"></li>
+    <li><a href="#"></a><img src="assets/Profile pic.png" alt="Imagem de Isabela Torres"></li>
   </ul>
   </nav>
-  <header>
+  
+    <header>
+    <div class="container">
+      <div id="profile">
+        <img src="assets/Profile pic.png" alt="Imagem de Isabela">
+        <div>
+          <h1>Isabela Torres</h1>
+          <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br> 
+            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+        </div>
+      </div>
+
+      <ul id="info">
+        <li>
+          <img src="assets/icons/MapPin.svg" alt="">
+          <span>São Paulo, Brazil</span>
+        </li>
+        <li>
+          <img src="assets/icons/AirplaneTilt.svg" alt="Icone de aviao">
+          <span>37 paises</span>
+        </li>
+        <li>
+          <img src="assets/icons/Image.svg" alt="Icone de imagem">
+          <span>240 Fotos</span>
+        </li>
+      </ul>
+
+    </div>
   </header>
+  </div>
 </body>
 </html>
