--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
     <img src="assets/images/Image 11.png" alt="...">
     <img src="assets/images/Image 12.png" alt="...">
   </main>
+  <footer class="container">
+    <span>Travelgram &copy; 2024</span>
+    <span>Termos de Uso</span>
+    <span>Politica de Privacidade</span>
+  </footer>
 </body>
 </html>
